# ModelDrivenGateways

./: license.txt
NodeDiscovery/NodeDiscovery/: Program.cs
NodeDiscovery_MS/NodeDiscovery/: Acceleration.wsdl  Program.cs
bundles/DataModeling/: license.txt
bundles/DataModeling/trunk/contrib/ws4d-gsoap/branches/release-0.7.x/: CMakeLists.txt  CTestConfig.cmake  CTestCustom.cmake
bundles/DataModeling/trunk/contrib/ws4d-gsoap/branches/release-0.7.x/WS/: devprof_2006_02.gsoap-wsse
bundles/DataModeling/trunk/contrib/ws4d-gsoap/branches/release-0.7.x/cmake-modules/: FindGSOAP.cmake
bundles/DataModeling/trunk/contrib/ws4d-gsoap/branches/release-0.7.x/doc/: CMakeLists.txt
bundles/DataModeling/trunk/contrib/ws4d-gsoap/branches/release-0.7.x/include/: soap_misc.h  stddpws.h  ws-addressing.h  ws-eventing.h  ws4d_device_description.h  ws4d_servicecache.h  ws4d_stringarray.h
bundles/DataModeling/trunk/contrib/ws4d-gsoap/branches/release-0.7.x/src/hosting_service/: CMakeLists.txt
bundles/DataModeling/trunk/contrib/ws4d-gsoap/branches/release-0.7.x/src/libdpws/: helper_eventingClient.c  helper_eventingPeer_mt.c  helper_eventingServer_mt.c  helper_mexServer_mt.c  ws-addressing.c  ws4d_epr.c  ws4d_eprflist.c  ws4d_hosting.c  ws4d_hosting_mt.c  ws4d_misc.c  ws4d_subscription_mt.c  ws4d_subsmanager.c  ws4d_targetservice.c  ws4d_targetservice_mt.c  wse.nsmap  wst.nsmap
bundles/DataModeling/trunk/contrib/ws4d-gsoap/branches/release-0.7.x/src/libdpws/fixups/: hostingC.c.patch  wseC.c.patch
bundles/DataModeling/trunk/contrib/ws4d-gsoap/branches/release-0.7.x/src/life-cycle-manager/: CMakeLists.txt  fileio.h  simple-lcm-client.c
bundles/DataModeling/trunk/contrib/ws4d-gsoap/branches/release-0.7.x/src/life-cycle-manager/ziplib-files/: unzip.h
bundles/DataModeling/trunk/contrib/ws4d-gsoap/branches/release-0.7.x/src/life-cycle-manager/ziplib-files/zLib/: configure
bundles/DataModeling/trunk/contrib/ws4d-gsoap/branches/release-0.7.x/src/samples/: CMakeLists.txt
bundles/DataModeling/trunk/contrib/ws4d-gsoap/branches/release-0.7.x/src/samples/ms-iop/: AttachmentService.c  CMakeLists.txt  EventingService.wsdl  SimpleService.c  call_AttachmentService.c  iop_device.c
bundles/DataModeling/trunk/contrib/ws4d-gsoap/branches/release-0.7.x/src/samples/tutorial/files/src/: acs_TemperatureEventListener.c  advanced_airconditioner.c  metadata.xml
bundles/DataModeling/trunk/contrib/ws4d-gsoap/branches/release-0.7.x/src/tools/: deviceMetadataToH.xslt  hostedMetadataToC.xslt  hostedMetadataToH.xslt  resolve.c  subsstatus.c  unsubscribe.c
bundles/DataModeling/trunk/contrib/ws4d-gsoap/tags/release-0.7/src/life-cycle-manager/ziplib-files/zLib/: CMakeLists.txt
contrib/gsoap/: config.h.in  configure
contrib/gsoap/autom4te.cache/: traces.0
contrib/gsoap/gsoap/: Makefile.am
contrib/ws4d-gsoap/WS/: devprof_2006_02.gsoap
contrib/ws4d-gsoap/branches/release-0.7.x/WS/: CMakeLists.txt  devprof_2006_02.gsoap
contrib/ws4d-gsoap/branches/release-0.7.x/src/libdpws/: CMakeLists.txt  helper_addressing.c  helper_addressing_mt.c  helper_discoveryPeer.c  helper_discoveryServer_mt.c  helper_dpwsDevice_mt.c  helper_dpwsHostedService_mt.c  helper_mexClient.c  helper_mexClient_mt.c  helper_soapmisc.c  hosting.gsoap  hosting.gsoap-wsse  ws-discovery.c  ws-eventing.c  ws4d_epr_mt.c  ws4d_eprflist_mt.c  ws4d_eprllist_mt.c  ws4d_misc_mt.c  ws4d_servicecache_mt.c  ws4d_subscription.c  ws4d_subsmanager_mt.c  ws4d_targetcache.c
contrib/ws4d-gsoap/branches/release-0.7.x/src/libdpws/fixups/: wstC.c.patch  wstServer.c.patch
contrib/ws4d-gsoap/branches/release-0.7.x/src/tools/: CMakeLists.txt  describe.c  embedwsdl.c  probe.c  supervisor.c
contrib/ws4d-gsoap/cmake-modules/: FindGSOAP.cmake
contrib/ws4d-gsoap/include/: ws-addressing.h
contrib/ws4d-gsoap/tags/release-0.7/src/samples/ms-iop/: AttachmentService.h  CMakeLists.txt  EventingService.h  SimpleService.wsdl  call_SimpleService.c  fileio.c
edu.teco.decenc/bitsio/: read_bits.h  read_bits_buf.c  write_bits_buf.c  write_bits_buf.h
edu.teco.decenc/edu.teco.decenc/bitsio/: makefile
edu.teco.decenc/edu.teco.decenc/dec/: decoder.c
edu.teco.decenc/edu.teco.decenc/prs74/: makefile  test.sh
edu.teco.decenc/enc/: makefile
edu.teco.dpws.example/src/: concom.h
particle_demo/Particle/: Makefile  prs74.c  prs_app_pc232_ssimp202_V5.err  prs_app_pc232_ssimp202_V5.hex  usb_bridge_pc232_V5.esym  usb_bridge_pc232_V5.hex  usb_bridge_pc232_V9.err  usb_bridge_pc232_ssimp202_V5.c
particle_demo/ParticleBaseSystem/boards/: ssimp202.h
particle_demo/ParticleBaseSystem/system/: acl.c  acl.h  ll.c
particle_demo/bitsio/: makefile  write_bits.h
particle_demo/dec/: write_str_func.c
particle_demo/soap/src/: config.h.in  gsoap_encoder_automata.h
src/: .project
src/AccelerationModel/: .project
src/AccelerationModel/src/: AccelerationDevice_device.c
src/AccelerationModel_static/Debug/: makefile
src/AccelerationModel_static/src/: AccelerationModel_device.c
src/AccelerationService/: .cproject
src/AccelerationService/Debug/: makefile
src/AccelerationService/src/: AccelerationServer.c  Acceleration_operations.h  Conversion.c  Conversion.h
src/DPWSExample/: .cproject  .project
src/DPWSExample/src/: Logging.ecorediag  SensorValues.wsdl  SensorValues.wsdl.bak  SensorValues.xsd  TimedTrigger.ecore  TimedTrigger.ecorediag  TimedTrigger.xsd  (+1 more)
src/SSimpDevice/: .cproject  .project
src/SSimpNode/: .cproject  .project
src/SensorValuesService/: .cproject
src/edu.teco.automata/: .project  plugin.properties  plugin.xml
src/edu.teco.automata.generator/: .classpath  .project  build.properties  generator.properties  log4j.properties  plugin.xml
src/edu.teco.automata.gmf.diagram/: .options  messages.properties  plugin.xml
src/edu.teco.automata.gmf.edit/: .project  plugin.properties
src/edu.teco.decenc/: .cproject  .project  makefile
src/edu.teco.dpws.example/: .cproject  .project
src/edu.teco.dpws.generator/: .classpath  .cproject  .project  build.properties
src/edu.teco.squery/: plugin.xml
src/src/: AccelerationModel_device.c
(+999 files in other folders)
